--- a/mac/SkyCheckers.xcodeproj/xcshareddata/xcschemes/SkyCheckers-macOS.xcscheme
+++ b/mac/SkyCheckers.xcodeproj/xcshareddata/xcschemes/SkyCheckers-macOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1100"
+   LastUpgradeVersion = "1140"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8D1107260486CEB800E47090"
+               BlueprintIdentifier = "72970EF4243864C0008ECB13"
                BuildableName = "SkyCheckers.app"
-               BlueprintName = "SkyCheckers"
+               BlueprintName = "SkyCheckers-macOS"
                ReferencedContainer = "container:SkyCheckers.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -27,15 +27,6 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8D1107260486CEB800E47090"
-            BuildableName = "SkyCheckers.app"
-            BlueprintName = "SkyCheckers"
-            ReferencedContainer = "container:SkyCheckers.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <Testables>
       </Testables>
    </TestAction>
@@ -47,26 +38,18 @@
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
-      migratedStopOnEveryIssue = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8D1107260486CEB800E47090"
+            BlueprintIdentifier = "72970EF4243864C0008ECB13"
             BuildableName = "SkyCheckers.app"
-            BlueprintName = "SkyCheckers"
+            BlueprintName = "SkyCheckers-macOS"
             ReferencedContainer = "container:SkyCheckers.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <EnvironmentVariables>
-         <EnvironmentVariable
-            key = "CGBITMAP_CONTEXT_LOG_ERRORS"
-            value = "1"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -78,9 +61,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8D1107260486CEB800E47090"
+            BlueprintIdentifier = "72970EF4243864C0008ECB13"
             BuildableName = "SkyCheckers.app"
-            BlueprintName = "SkyCheckers"
+            BlueprintName = "SkyCheckers-macOS"
             ReferencedContainer = "container:SkyCheckers.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
