--- a/linux/snapcraft.yaml
+++ b/linux/snapcraft.yaml
@@ -14,7 +14,7 @@ apps:
 
 parts:
   skycheckers:
-    after: [sdl2, sdl2_mixer, sdl2_ttf, glew]
+    after: [sdl2, sdl2-mixer, sdl2-ttf, glew]
     source: https://github.com/zorgiepoo/Sky-Checkers.git
     source-subdir: linux
     plugin: make
@@ -23,12 +23,12 @@ parts:
     source: https://www.libsdl.org/release/SDL2-2.0.12.tar.gz
     plugin: autotools
   
-  sdl2_mixer:
+  sdl2-mixer:
     after: [sdl2]
     source: https://www.libsdl.org/projects/SDL_mixer/release/SDL2_mixer-2.0.4.tar.gz
     plugin: autotools
 
-  sdl2_ttf:
+  sdl2-ttf:
     after: [sdl2]
     source: https://www.libsdl.org/projects/SDL_ttf/release/SDL2_ttf-2.0.15.tar.gz
     plugin: autotools
